[metadata]
name = wrgl
version = 0.7.2
author = Khoi Pham
author_email = pckhoi@gmail.com
description = Data matching utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wrgl/python-sdk
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/wrgl/python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = wrgl
python_requires = >=3.6
install_requires =
    requests >= 2.26.0
    requests-toolbelt >= 0.9.1
    attrs >= 21.2.0